// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
http://www.example.com:80/_a
=====================================output=====================================
http://www.example.com:80/_a

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
http://www.example.com:80/_a_
=====================================output=====================================
http://www.example.com:80/_a_

================================================================================
`;

exports[`snippet: #2 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
http://www.example.com:80/_a__
=====================================output=====================================
http://www.example.com:80/_a\\_\\_

================================================================================
`;

exports[`snippet: #3 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
http://www.example.com:80/_a_b
=====================================output=====================================
http://www.example.com:80/_a_b

================================================================================
`;

exports[`snippet: #4 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
http://www.example.com:80/_a_/
=====================================output=====================================
http://www.example.com:80/_a_/

================================================================================
`;

exports[`snippet: #5 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
http://www.example.com:80/_a_/_
=====================================output=====================================
http://www.example.com:80/_a_/_

================================================================================
`;

exports[`snippet: #6 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_
=====================================output=====================================
_http://www.example.com:80/_a_

================================================================================
`;

exports[`snippet: #7 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a__
=====================================output=====================================
_http://www.example.com:80/_a\\_\\_

================================================================================
`;

exports[`snippet: #8 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a___
=====================================output=====================================
_http://www.example.com:80/_a\\_\\_\\_

================================================================================
`;

exports[`snippet: #9 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_b_
=====================================output=====================================
_http://www.example.com:80/_a_b_

================================================================================
`;

exports[`snippet: #10 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_/_
=====================================output=====================================
_http://www.example.com:80/_a_/\\_

================================================================================
`;

exports[`snippet: #11 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_/__
=====================================output=====================================
_http://www.example.com:80/_a_/\\_\\_

================================================================================
`;

exports[`snippet: #12 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
*http://www.example.com:80/_a*
=====================================output=====================================
_http://www.example.com:80/_a_

================================================================================
`;

exports[`snippet: #13 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
*http://www.example.com:80/_a_*
=====================================output=====================================
_http://www.example.com:80/_a__

================================================================================
`;

exports[`snippet: #14 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
*http://www.example.com:80/_a__*
=====================================output=====================================
_http://www.example.com:80/_a\\_\\__

================================================================================
`;

exports[`snippet: #15 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
*http://www.example.com:80/_a_b*
=====================================output=====================================
_http://www.example.com:80/_a_b_

================================================================================
`;

exports[`snippet: #16 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
*http://www.example.com:80/_a_/*
=====================================output=====================================
_http://www.example.com:80/_a_/_

================================================================================
`;

exports[`snippet: #17 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
*http://www.example.com:80/_a_/_*
=====================================output=====================================
_http://www.example.com:80/_a_/__

================================================================================
`;

exports[`snippet: #18 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a*
=====================================output=====================================
_http://www.example.com:80/_a\\*

================================================================================
`;

exports[`snippet: #19 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_*
=====================================output=====================================
_http://www.example.com:80/_a_\\*

================================================================================
`;

exports[`snippet: #20 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a__*
=====================================output=====================================
_http://www.example.com:80/_a\\_\\_\\*

================================================================================
`;

exports[`snippet: #21 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_b*
=====================================output=====================================
_http://www.example.com:80/_a_b\\*

================================================================================
`;

exports[`snippet: #22 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_/*
=====================================output=====================================
_http://www.example.com:80/_a_/\\*

================================================================================
`;

exports[`snippet: #23 format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
_http://www.example.com:80/_a_/_*
=====================================output=====================================
_http://www.example.com:80/_a_/\\_\\*

================================================================================
`;
